--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,8 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "public",
+    "site": "nisrine",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
